@startuml ERD

skinparam linetype ortho

entity User {
    *id: ObjectId <<generated>>
    --
    *firstName: String
    *lastName: String
    *email: String
    *password: String
    role:Role
}

enum Role {
    Admin
    Player
}

entity Figure {
    *id: ObjectId <<generated>>
    --
    *user_id: ObjectId <<FK>>   
    --
    *shape: String
    *color: String
    *symbol: String
    *measurement: Number
}

User ||--|{ Figure
User }|--|| Role

@enduml